# ai-tools

./: .gitignore  LICENSE  README.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
nextjs-oci-openai-chat/: .env.example  .gitignore  docker-compose.yml  readme.md
nextjs-oci-openai-chat/backend/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Readme.md  env.example  pyproject.toml
nextjs-oci-openai-chat/backend/app/: config.py  main.py  schemas.py  utils.py
nextjs-oci-openai-chat/backend/app/routers/: chat.py  health.py  models.py  responses.py
nextjs-oci-openai-chat/backend/docs/: api-reference.md
nextjs-oci-openai-chat/backend/scripts/: run_conversation_create_test.py  start_fastapi.sh  test_chat_curl.sh  test_rag_tool.sh  test_tools.sh
nextjs-oci-openai-chat/backend/tests/: conftest.py  test_chat_api.py  test_chat_completions.py  test_health.py  test_models.py  test_responses.py  test_utils_errors.py  test_utils_tools.py
nextjs-streamlit-oci-realtime-speech/: .env.example  .gitignore  Dockerfile  README.md  app.py  audio_handler.py  config.py  message_schema.py  pyproject.toml  server.py  speech_service.py
nextjs-streamlit-oci-realtime-speech/frontend/: README.md  package-lock.json  package.json
nextjs-streamlit-oci-realtime-speech/frontend/pages/: index.js
nextjs-streamlit-oci-realtime-speech/frontend/pages/api/: start.js  stop.js  transcribe.js
nextjs-streamlit-oci-realtime-speech/frontend/public/: audio-processor.js
nextjs-streamlit-oci-realtime-speech/frontend/stores/: transcriptionStore.js
streamlit-summarizer/: .dockerignore  .gitignore  README.md  config.toml  docker-compose-system-oci.yml  docker-compose.yml  pyproject.toml
streamlit-summarizer/config/: config.yaml.example  oci-config.example
streamlit-summarizer/data/: saved_prompts.json
streamlit-summarizer/docker/: Dockerfile  docker-setup.sh
streamlit-summarizer/docs/: DOCKER-SETUP.md  testing-e2e.md
streamlit-summarizer/logs/: README.md
streamlit-summarizer/scripts/: test-oci-config.py
streamlit-summarizer/src/: STRUCTURE.md  app.py
streamlit-summarizer/src/components/: error_display.py  file_stats.py  progress_display.py  summary_stats.py
streamlit-summarizer/src/config/: constants.py  session_state.py
streamlit-summarizer/src/ui/: main_content.py  sidebar.py
streamlit-summarizer/src/utils/: callbacks.py  genai_inference.py  logger.py  oci_client.py  processing.py  prompts.py  styles.py
streamlit-summarizer/tests/e2e/: harness.py  helpers.py  test_model_switch.py  test_oversize_upload.py  test_prompt_persistence.py  test_small_upload.py
(+23 files in other folders)
